--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A full-stack real-time collaborative chat application built with the **MERN stack** (MongoDB, Express.js, React.js, Node.js) that allows users to work in project-based rooms with **collaborators**, **live chat**, and **AI-powered assistant** powered by the **Gemini API**.",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build": "npm install && npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend",
     "start": "cd backend && npm start"
   },
   "repository": {
